// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addResolveFunctionsToSchema Works for basic schema 1`] = `
Object {
  "data": Object {
    "simpleInt": 0,
  },
}
`;

exports[`addSubscriptionChannelsToSchema Should work on simple example 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "simpleInt": 0,
    },
  },
}
`;

exports[`makeExecutableSchema Able to compose simple schema 1`] = `
Object {
  "data": Object {
    "simpleInt": 0,
  },
}
`;

exports[`makeExecutableSchema Able to concat simple type definition 1`] = `
Object {
  "data": Object {
    "simpleInt": 0,
    "simpleString": "Hello",
  },
}
`;

exports[`makeExecutableSchema concats subscriptions as well 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "simpleString": "Hello",
    },
  },
}
`;

exports[`makeExecutableSchema works for subscriptions as well 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "simpleInt": 0,
    },
  },
}
`;
